src/test/compile-fail/put-in-fn.rs
// error-pattern:put in non-iterator

fn f() -> int { put 10; }

fn main() { }
